--- a/index.html
+++ b/index.html
@@ -100,6 +100,22 @@
         .mixer-verdict { border: 2px solid #a855f7; background: linear-gradient(145deg, #2a0a4a, #1e293b); }
 
     </style>
+<header class="relative mb-6 text-center border-b border-slate-700 pb-6">
+    <div class="absolute top-0 left-0 right-0 w-full">
+        <div class="container mx-auto flex justify-between items-center p-1 md:p-0">
+            <a href="https://opixtm.github.io/Trade/about" target="_blank" rel="noopener noreferrer" 
+               class="btn-action bg-blue-800 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
+                CHART AI
+            </a>
+            
+            <a href="https://opixtm.github.io/Trade/services" target="_blank" rel="noopener noreferrer" 
+               class="btn-action bg-yellow-500 hover:bg-yellow-600 text-slate-900 font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
+                BACKTEST
+            </a>
+        </div>
+    </div>
+
+</header>
 </head>
 <body class="bg-slate-900 text-slate-300">
 
