--- a/about.html
+++ b/about.html
@@ -104,6 +104,20 @@
         }
     </style>
 </head>
+    <header class="relative mb-6 text-center border-b border-slate-700 pb-6">
+    <div class="absolute top-0 left-0 right-0 w-full">
+        <div class="container mx-auto flex justify-between items-center p-1 md:p-0">
+            <a href="https://opixtm.github.io/Trade/" target="_blank" rel="noopener noreferrer" 
+               class="btn-action bg-blue-800 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
+                COPILOT MAIN
+            </a>
+            
+            <a href="https://opixtm.github.io/Trade/services" target="_blank" rel="noopener noreferrer" 
+               class="btn-action bg-yellow-500 hover:bg-yellow-600 text-slate-900 font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
+                BACKTEST
+            </a>
+        </div>
+    </div>
 <body class="antialiased">
 
     <div class="min-h-screen flex flex-col">
