--- a/services.html
+++ b/services.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <header class="relative mb-6 text-center border-b border-slate-700 pb-6">
+    <div class="absolute top-0 left-0 right-0 w-full">
+        <div class="container mx-auto flex justify-between items-center p-1 md:p-0">
+            <a href="https://opixtm.github.io/Trade/" target="_blank" rel="noopener noreferrer" 
+               class="btn-action bg-blue-800 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
+                COPILOT MAIN
+            </a>
+            
+            <a href="https://opixtm.github.io/Trade/about" target="_blank" rel="noopener noreferrer" 
+               class="btn-action bg-yellow-500 hover:bg-yellow-600 text-slate-900 font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
+                CHART AI
+            </a>
+        </div>
+    </div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Passive Backtest Machine - Dynamic Engine</title>
