--- a/about.html
+++ b/about.html
@@ -829,6 +829,19 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+<div class="absolute top-0 left-0 right-0 w-full">
+        <div class="container mx-auto flex justify-between items-center p-1 md:p-0">
+            <a href="https://opixtm.github.io/Trade/" target="_blank" rel="noopener noreferrer" 
+               class="btn-action bg-blue-800 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
+                COPILOT MAIN
+            </a>
+            
+            <a href="https://opixtm.github.io/Trade/services" target="_blank" rel="noopener noreferrer" 
+               class="btn-action bg-yellow-500 hover:bg-yellow-600 text-slate-900 font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
+                BACKTEST
+            </a>
+        </div>
+    </div>
 <div class="bg-slate-800 p-6 rounded-xl flex flex-col" style="height: 88vh;">
             <div class="flex flex-wrap justify-between items-center mb-4 gap-4 flex-shrink-0">
             
