--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </a>
         </div>
     </div>
+    </header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trading Co-Pilot V.X.8.0 FINAL (Mod)</title>
