--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             </a>
         </div>
     </div>
-
+    </header>
     <div class="mt-24">
         <h1 class="text-3xl md:text-4xl font-black text-white tracking-tight">TRADING <span class="text-sky-400">CO-PILOT</span></h1>
         <p class="text-slate-400 mt-1">v.X.8.0 - MIXER</p>
