--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <header class="relative mb-6 text-center border-b border-slate-700 pb-6">
     <div class="absolute top-10 left-0 right-0 w-full">
         <div class="container mx-auto flex justify-between items-center p-1 md:p-0">
-            <a href="https://opixtm.github.io/Trade/about" target="_blank" rel="noopener noreferrer" 
+            <a href="https://opixtm.github.io/Trade/" target="_blank" rel="noopener noreferrer" 
                class="btn-action bg-blue-800 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
-                CHART AI
+                CMAIN COPILOT
             </a>
             
             <a href="https://opixtm.github.io/Trade/services" target="_blank" rel="noopener noreferrer" 
