--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
 <body class="antialiased">
 
     <div class="min-h-screen flex flex-col">
-        <header class="bg-gray-800/50 backdrop-blur-sm shadow-lg p-4 sticky top-0 z-20">
+        <header 
             <h1 class="text-2xl font-bold text-center text-white">Co-pilot CHART<span class="text-blue-400">"AI"</span> v5.9 <span class="text-sm font-light text-purple-400">AI Mentor (Prompt Super Ketat)</span></h1>
         </header>
 
