--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Co-pilot CHART "AI" v5.9 - Prompt Super Ketat</title>
+    <title>CHART "AI" v5.9</title>
      <header class="relative mb-6 text-center border-b border-slate-700 pb-6">
     <div class="absolute top-10 left-0 right-0 w-full">
         <div class="container mx-auto flex justify-between items-center p-1 md:p-0">
