--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
 
     <div class="min-h-screen flex flex-col">
         <header 
-            <h1 class="text-2xl font-bold text-center text-white">Co-pilot CHART<span class="text-blue-400">"AI"</span> v5.9 <span class="text-sm font-light text-purple-400">AI Mentor (Prompt Super Ketat)</span></h1>
+            <h1 class="text-2xl font-bold text-center text-white"><span class="text-blue-400">CHART "AI"</span></h1>
         </header>
 
         <div class="flex-grow flex flex-col md:flex-row p-4 gap-4">
