--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
         <div class="container mx-auto flex justify-between items-center p-1 md:p-0">
             <a href="https://opixtm.github.io/Trade/" target="_blank" rel="noopener noreferrer" 
                class="btn-action bg-blue-800 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
-                CMAIN COPILOT
+                COPILOT
             </a>
             
             <a href="https://opixtm.github.io/Trade/services" target="_blank" rel="noopener noreferrer" 
@@ -124,7 +124,7 @@
 
     <div class="min-h-screen flex flex-col">
         <header 
-            <h1 class="text-2xl font-bold text-center text-white"><span class="text-blue-400">CHART "AI"</span></h1>
+            <h1 class="text-2xl font-bold text-center text-white"><span class="text-blue-400">  chartAI</span></h1>
         </header>
 
         <div class="flex-grow flex flex-col md:flex-row p-4 gap-4">
@@ -133,10 +133,7 @@
                  <div class="bg-gray-800 rounded-lg p-4 flex flex-col gap-4 shadow-md flex-grow">
                     <div>
                         <h3 class="text-lg font-bold text-white mb-1">Mode Analisa</h3>
-                        <p class="text-xs text-gray-400 mb-4">
-                            <span class="font-bold">Mode Standar:</span> Cukup isi LTF. <br/>
-                            <span class="font-bold">Mode MTF Presisi:</span> Isi HTF & LTF.
-                        </p>
+                      
                         <div class="mb-4">
                             <label class="block text-sm font-medium text-gray-300 mb-1">1. Chart HTF (Tren Besar) <span class="text-gray-500 text-xs italic">- Opsional</span></label>
                             <div id="htf-drop-zone" class="chart-preview-container">
