--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
         <div class="container mx-auto flex justify-between items-center p-1 md:p-0">
             <a href="https://opixtm.github.io/Trade/" target="_blank" rel="noopener noreferrer" 
                class="btn-action bg-blue-800 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg text-xs md:text-sm">
-                MAIN COPILOT
+                COPILOT
             </a>
             
             <a href="https://opixtm.github.io/Trade/about" target="_blank" rel="noopener noreferrer" 
