--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
 <body class="antialiased">
 
     <div class="min-h-screen flex flex-col">
-        <header class="bg-gray-800/50 backdrop-blur-sm shadow-lg p-4 top-0 z-20 h-16 relative flex items-center justify-center>
+        <header class="bg-gray-800/50 backdrop-blur-sm shadow-lg p-4 top-0 z-20 h-16 relative flex items-center justify-center">
     
     <div class="absolute left-4 top-1/2 -translate-y-1/2">
         <a href="https://opixtm.github.io/Trade/" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition-colors duration-300">
@@ -118,7 +118,7 @@
         </a>
     </div>
 
-    <h1 class="text-2xl font-bold text-white"><span class="text-blue-400">"AI CHART"</span></h1>
+    <h1 class="text-2xl font-bold text-white">Co-pilot CHART<span class="text-blue-400">"AI"</span> v5.9</h1>
 
     <div class="absolute right-4 top-1/2 -translate-y-1/2">
         <a href="https://opixtm.github.io/Trade/services" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-gray-900 font-bold py-2 px-4 rounded transition-colors duration-300">
