--- a/about.html
+++ b/about.html
@@ -596,7 +596,9 @@ document.addEventListener('DOMContentLoaded', () => {
             - Berikan 3 level Target Profit (TP1, TP2, TP3) yang realistis untuk scalping, masing-masing dengan harga spesifik dan alasan teknikal singkat (misal: "TP1 di 152.00, resistance minor sebelumnya").
             - **PENTING**: Berikan alasan singkat dan jelas untuk nilai 'stopLoss' dan 'targetProfit' yang Anda tentukan. Alasan harus berdasarkan struktur pasar yang terlihat di chart (misal: "di bawah swing low terakhir", "di area resistance terdekat").
             - **SARAN PENINGKATAN**: Setelah analisa selesai, berikan satu saran singkat di field 'saranPeningkatan' tentang bagaimana analisa ini bisa lebih divalidasi. Contoh: "Untuk konfirmasi lebih kuat, perhatikan volume saat breakout" atau "Analisa akan lebih kuat jika dikonfirmasi dengan indikator RSI". Jika analisa sudah sangat kuat, isi dengan "Analisa saat ini sudah cukup komprehensif."
-            - Dasarkan analisa Anda HANYA pada informasi visual di chart. Seluruh output Anda harus berupa satu objek JSON valid yang sesuai dengan struktur berikut: ${jsonSchema} \n`;
+            - Dasarkan analisa Anda HANYA pada informasi visual di chart. Seluruh output Anda harus berupa satu objek JSON valid yang sesuai dengan struktur berikut: ${jsonSchema} \n
+            
+            Format jawaban Anda dengan jelas menggunakan poin-poin. Jangan gunakan format Markdown. Cukup teks biasa dengan baris baru.`;
 
             if(htfImageBase64) {
                 analysisParts.push(
@@ -828,7 +830,7 @@ document.addEventListener('DOMContentLoaded', () => {
             Rencana Trading:
             ${planString}
 
-            Tugas Anda adalah meninjau rencana ini secara kritis. Berikan umpan balik yang membangun dalam Bahasa Indonesia. Fokus pada:
+            Tugas Anda adalah meninjau rencana ini secara kritis namun "padat". Berikan umpan balik yang membangun dalam Bahasa Indonesia. Fokus pada:
             1.  **Validasi Setup**: Apakah ada kelemahan dalam logika setup yang diusulkan?
             2.  **Manajemen Risiko**: Apakah Stop Loss sudah optimal? Apakah ada cara untuk memperketatnya?
             3.  **Skenario Alternatif**: Apa skenario lain yang mungkin terjadi yang tidak dipertimbangkan?
