--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
                                  </div>
                                  <!-- Tabel Hasil Analisa -->
                                  <div class="bg-gray-900 rounded-lg overflow-hidden">
-                                    <div class="grid grid-cols-1 md:grid-cols-3"><div class="analysis-table-cell font-bold text-gray-400 bg-gray-800">Parameter</div><div class="analysis-table-cell font-bold text-green-400 bg-gray-800">Scalping Setup LONG</div><div class="analysis-table-cell font-bold text-red-400 bg-gray-800">Scalping Setup SHORT</div></div>
+                                    <div class="grid grid-cols-1 md:grid-cols-3"><div class="analysis-table-cell font-bold text-gray-400 bg-gray-800">Parameter</div><div class="analysis-table-cell font-bold text-green-400 bg-gray-800">Setup LONG</div><div class="analysis-table-cell font-bold text-red-400 bg-gray-800">Setup SHORT</div></div>
                                     <div class="grid grid-cols-1 md:grid-cols-3"><div class="analysis-table-cell font-semibold">Kondisi Pasar</div><div class="analysis-table-cell" id="long-kondisi">-</div><div class="analysis-table-cell" id="short-kondisi">-</div></div>
                                     <div class="grid grid-cols-1 md:grid-cols-3"><div class="analysis-table-cell font-semibold">Strategi "Aman"</div><div class="analysis-table-cell" id="long-strategi">-</div><div class="analysis-table-cell" id="short-strategi">-</div></div>
                                     <div class="grid grid-cols-1 md:grid-cols-3"><div class="analysis-table-cell font-semibold">Probabilitas</div><div class="analysis-table-cell" id="long-probabilitas">-</div><div class="analysis-table-cell" id="short-probabilitas">-</div></div>
