--- a/about.html
+++ b/about.html
@@ -338,18 +338,21 @@
                                 </datalist>
                                 <button id="generate-proyeksi-btn" class="w-full sm:w-auto bg-green-600 text-white font-bold py-2 px-6 rounded-lg hover:bg-green-700 transition">📊 GO 🏁</button>
                             </div>
-                            <div id="proyeksi-output" class="mt-6">
-                                <div id="proyeksi-placeholder" class="text-center text-gray-500 p-8"><p>Masukkan simbol aset dan klik "Analisa Proyeksi" untuk melihat hasil.</p></div>
-                            </div>
-                            <div class="mt-4 p-3 bg-gray-800 rounded-lg hidden" id="proyeksi-live-price-container">
-                                <div class="flex items-center">
-                                    <p class="text-sm text-gray-400 mr-2">Harga Live Terkini:</p>
-                                    <span id="ws-status-indicator" class="h-3 w-3 rounded-full bg-gray-500" title="Status Koneksi Data"></span>
-                                </div>
-                                <p class="text-xl font-bold text-green-400" id="proyeksi-live-price-output">-</p>
-                            </div>
-                        </div>
-                    </div>
+                            <div id="proyeksi" class="tab-pane">
+    <div class="bg-gray-900 p-4 rounded-lg">
+        <div id="proyeksi-output" class="mt-6">
+            </div>
+
+        <div class="mt-4 p-3 bg-gray-800 rounded-lg hidden" id="proyeksi-live-price-container">
+            <div class="flex items-center">
+                <p class="text-sm text-gray-400 mr-2">Harga Live Terkini:</p>
+                <span id="ws-status-indicator" class="h-3 w-3 rounded-full bg-gray-500" title="Status Koneksi Data"></span>
+            </div>
+            <p class="text-xl font-bold text-green-400" id="proyeksi-live-price-output">-</p>
+        </div>
+
+    </div>
+</div>
 
                     <div id="backtest" class="tab-pane hidden">
                         <h3 class="text-xl font-bold text-white mb-4">⚙️ Backtesting Strategi</h3>
