--- a/about.html
+++ b/about.html
@@ -339,8 +339,9 @@
                                 <button id="generate-proyeksi-btn" class="w-full sm:w-auto bg-green-600 text-white font-bold py-2 px-6 rounded-lg hover:bg-green-700 transition">📊 GO 🏁</button>
                             </div>
                             <div id="proyeksi" class="tab-pane">
-    <div class="bg-gray-900 p-4 rounded-lg">
-        <div id="proyeksi-output" class="mt-6">
+            <div class="bg-gray-900 p-4 rounded-lg">
+                <div id="proyeksi-output" class="mt-6">
+                    <div id="proyeksi-placeholder" class="text-center text-gray-500 p-8"><p>Masukkan simbol aset 
             </div>
 
         <div class="mt-4 p-3 bg-gray-800 rounded-lg hidden" id="proyeksi-live-price-container">
