--- a/about.html
+++ b/about.html
@@ -341,9 +341,9 @@
                             <div id="proyeksi" class="tab-pane">
             <div class="bg-gray-900 p-4 rounded-lg">
                 <div id="proyeksi-output" class="mt-6">
-                    <div id="proyeksi-placeholder" class="text-center text-gray-500 p-8"><p>Masukkan simbol aset 
+                    <div id="proyeksi-placeholder" class="text-center text-gray-500 p-8"><p>Masukkan simbol aset...</p> 
             </div>
-
+        </div>
         <div class="mt-4 p-3 bg-gray-800 rounded-lg hidden" id="proyeksi-live-price-container">
             <div class="flex items-center">
                 <p class="text-sm text-gray-400 mr-2">Harga Live Terkini:</p>
