--- a/about.html
+++ b/about.html
@@ -1271,8 +1271,8 @@ Berdasarkan sintesis holistik dari SEMUA data di atas, berikan jawaban HANYA dal
              `;
              proyeksiOutput.innerHTML = resultsHtml;
         }
-
-    } catch (error) {
+// TAMBAHKAN BARIS TES INI:
+            proyeksiOutput.innerHTML = '<h1 class="text-white text-2xl">TES: Berhasil sampai di sini!</h1>';    } catch (error) {
         console.error("Kesalahan Proyeksi Harga:", error);
         proyeksiOutput.innerHTML = `<p class="text-red-400">Gagal menganalisa proyeksi harga: ${error.message}</p>`;
     
