--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trading Co-Pilot V.X.8.0 FINAL (Mod)</title>
+    <title>ANALYZER</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.plot.ly/plotly-2.32.0.min.js" charset="utf-8"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -113,8 +113,8 @@
     <div class="container mx-auto p-4 md:p-6">
         
         <header class="relative mb-6 text-center">
-            <h1 class="text-3xl md:text-4xl font-black text-white tracking-tight">🎢<span class="text-sky-400">CO-PILOT</span></h1>
-            <p class="text-slate-400 mt-1">v.X.8.0 - MIXER</p>
+            <h1 class="text-3xl md:text-4xl font-black text-white tracking-tight"><span class="text-sky-400">🔎ANALYZER</span></h1>
+            <p class="text-slate-400 mt-1">----</p>
         </header>
             <header class="relative mb-6 text-center border-b border-slate-700 pb-6">
                     <div class="absolute top-0 left-0 right-0 w-full">
@@ -176,15 +176,15 @@
                 <!-- [MODIFIED] Panel Kontrol Utama diubah untuk memasukkan harga live -->
                 <div id="main-controls" class="bg-slate-800 p-4 rounded-xl mb-6 grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 gap-4 items-center">
                     <div class="lg:col-span-1">
-                        <label for="asset-select" class="block text-sm font-medium text-slate-400 mb-1">Pilih Aset:</label>
+                        <label for="asset-select" class="block text-sm font-medium text-slate-400 mb-1"></label>
                         <select id="asset-select" class="w-full bg-slate-700 border-slate-600 rounded-lg p-2.5 text-white focus:ring-sky-500 focus:border-sky-500 font-bold"></select>
                     </div>
                     <div class="lg:col-span-1">
-                        <label for="tf-select" class="block text-sm font-medium text-slate-400 mb-1">Kombinasi TF:</label>
+                        <label for="tf-select" class="block text-sm font-medium text-slate-400 mb-1"></label>
                         <select id="tf-select" class="w-full bg-slate-700 border-slate-600 rounded-lg p-2.5 text-white focus:ring-sky-500 focus:border-sky-500 font-bold"></select>
                     </div>
                     <div class="lg:col-span-2">
-                        <label class="block text-sm font-medium text-slate-400 mb-1">Mode Analisa:</label>
+                        <label class="block text-sm font-medium text-slate-400 mb-1"></label>
                         <div id="mode-switcher" class="grid grid-cols-3 gap-2">
                             <input type="radio" id="mode-copilot" name="analysis-mode" value="copilot" class="sr-only peer" checked>
                             <label for="mode-copilot" class="flex items-center justify-center w-full p-2 font-bold text-sky-400 bg-slate-700/50 rounded-lg border-2 border-slate-700 cursor-pointer peer-checked:border-sky-500 peer-checked:bg-sky-900/50 peer-checked:text-sky-300 transition-all duration-200">Matic</label>
@@ -198,11 +198,11 @@
                     </div>
                     <!-- [MODIFIED] Elemen Harga Live dipindahkan ke sini -->
                     <div class="text-right lg:col-span-1">
-                    <div> <span class="text-sm text-slate-400">Harga Saat Ini:</span>
-                        <p id="live-price-display" class="text-xl font-bold text-sky-400">Loading...</p>
+                    <div> <span class="text-xs text-slate-400"></span>
+                        <p id="live-price-display" class="text-xs font-bold text-sky-400">Loading...</p>
                     </div>
-                    <div class="mt-2"> <span class="text-sm text-slate-400">Funding / Countdown:</span>
-                        <p id="funding-info-display" class="text-lg font-bold text-amber-400">Loading...</p>
+                    <div class="mt-2"> <span class="text-xs text-slate-400"></span>
+                        <p id="funding-info-display" class="text-xs font-bold text-amber-400">Loading...</p>
                     </div>
                 </div>
                 </div>
@@ -243,11 +243,11 @@
                     <div id="pro-dashboard" class="space-y-6 hidden">
                          <div id="pro-analysis-cockpit" class="grid grid-cols-1 sm:grid-cols-2 gap-4 hidden">
                             <div id="pro-panel-1" class="pro-panel border-l-sky-400">
-                                <p id="pro-panel-1-title" class="pro-panel-title">SILINDER 1: ARAH TREN</p>
+                                <p id="pro-panel-1-title" class="pro-panel-title">TIMEFRAME 1: ARAH TREN</p>
                                 <p id="pro-panel-1-value" class="text-slate-500">-</p>
                             </div>
                             <div id="pro-panel-2" class="pro-panel border-l-amber-400">
-                                <p id="pro-panel-2-title" class="pro-panel-title">SILINDER 2: SETUP</p>
+                                <p id="pro-panel-2-title" class="pro-panel-title">TIMEFRAME 2: SETUP</p>
                                 <p id="pro-panel-2-value" class="text-slate-500">-</p>
                             </div>
                             <div id="pro-panel-3" class="pro-panel border-l-emerald-400">
@@ -273,11 +273,11 @@
                     <div id="mixer-dashboard" class="space-y-6 hidden">
                         <div id="mixer-analysis-cockpit" class="grid grid-cols-1 sm:grid-cols-2 gap-4 hidden">
                             <div id="mixer-panel-1" class="pro-panel border-l-sky-400">
-                                <p id="mixer-panel-1-title" class="pro-panel-title">SILINDER 1: ARAH TREN</p>
+                                <p id="mixer-panel-1-title" class="pro-panel-title">TIMEFRAME 1: ARAH TREN</p>
                                 <p id="mixer-panel-1-value" class="text-slate-500">-</p>
                             </div>
                             <div id="mixer-panel-2" class="pro-panel border-l-amber-400">
-                                <p id="mixer-panel-2-title" class="pro-panel-title">SILINDER 2: SETUP</p>
+                                <p id="mixer-panel-2-title" class="pro-panel-title">TIMEFRAME 2: SETUP</p>
                                 <p id="mixer-panel-2-value" class="text-slate-500">-</p>
                             </div>
                             <div id="mixer-panel-3" class="pro-panel border-l-emerald-400">
@@ -303,7 +303,7 @@
                             </div>
                         </div>
                         <div id="mixer-verdict-container" class="mixer-stage mixer-verdict p-6 text-center hidden">
-                            <h3 class="text-2xl font-black text-purple-300 mb-2">⚡ PUTUSAN PAMUNGKAS ⚡</h3>
+                            <h3 class="text-2xl font-black text-purple-300 mb-2">⚡ PUTUSAN FINAL ⚡</h3>
                             <p id="mixer-verdict-text" class="text-lg font-semibold text-white"></p>
                             <p id="mixer-verdict-reason" class="text-sm text-purple-200/80 mt-1"></p>
                              <button id="mixer-lanjut-eksekusi-btn" class="btn-action w-full md:w-auto mx-auto mt-4 bg-emerald-600 hover:bg-emerald-500 text-white font-bold py-3 px-6 rounded-lg flex items-center justify-center gap-2 hidden">
@@ -358,7 +358,7 @@
                          <div id="entry-zone-container" class="bg-slate-900 p-4 rounded-lg border border-slate-700 hidden"><h3 class="text-lg font-bold text-white mb-2">Rekomendasi Zona Re-entry (LWMA Channel)</h3><p id="entry-zone-desc" class="text-slate-400 text-sm mb-2"></p><div class="text-center bg-sky-900/50 p-3 rounded-lg"><p id="entry-zone-label" class="text-sm text-sky-300"></p><p id="entry-zone-range" class="text-2xl font-bold text-white"></p></div></div>
                      </div>
                     <div id="kalkulator-container" class="bg-slate-800 p-6 rounded-xl">
-                        <h2 class="text-2xl font-bold text-white mb-2">💰 KALKULATOR CUAN & SOP</h2>
+                        <h2 class="text-2xl font-bold text-white mb-2">💰 KALKULATOR & SOP</h2>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-x-6 gap-y-4">
                             <div class="space-y-4">
                                 <div class="grid grid-cols-2 gap-4"><div><label for="modal" class="block text-sm font-medium text-slate-400">Total Modal ($)</label><input type="number" id="modal" value="250" class="w-full bg-slate-700 border-slate-600 rounded-lg p-2 text-white mt-1"></div><div><label for="risk-percent" class="block text-sm font-medium text-slate-400">Risiko/Trade (%)</label><input type="number" id="risk-percent" value="1.5" step="0.1" class="w-full bg-slate-700 border-slate-600 rounded-lg p-2 text-white mt-1"></div></div>
@@ -1454,23 +1454,23 @@ document.addEventListener('DOMContentLoaded', function () {
 
         if (analysisMode === 'copilot') {
             tfConfig = COPILOT_TF_CONFIG[timeframeKey];
-            title = `🧭 Matic Panel 🎚️`;
-            description = `Jalankan analisa untuk menghitung Trade Opportunity Score (TOS) berdasarkan kombinasi TF ${tfConfig.label}.`;
-            btnText = `Hitung TOS untuk ${tfConfig.label}`;
+            title = `🧭 Matic Panel `;
+            // description = `Jalankan analisa untuk menghitung Trade Opportunity Score (TOS) berdasarkan kombinasi TF ${tfConfig.label}.`;
+            btnText = `Analisa MATIC ${tfConfig.label}`;
             if(ui.eksekusi.findEntryBtn) ui.eksekusi.findEntryBtn.style.display = 'flex';
             ui.eksekusi.findEntryBtnText.textContent = `CARI ZONA ENTRY DI ${tfConfig.eksekusi.toUpperCase()}`;
 
         } else if (analysisMode === 'pro') {
             tfConfig = PRO_TF_CONFIG[timeframeKey];
             title = `🎯 Pro Panel 🎯`;
-            description = `Jalankan analisa 3-TF untuk mendapatkan sintesis keselarasan pasar pada kombinasi ${tfConfig.label}.`;
-            btnText = `Mulai Analisa 3-TF`;
+            // description = `Jalankan analisa 3-TF untuk mendapatkan sintesis keselarasan pasar pada kombinasi ${tfConfig.label}.`;
+            btnText = `ANALISA PRO ${tfConfig.label}`;
             if(ui.eksekusi.findEntryBtn) ui.eksekusi.findEntryBtn.style.display = 'none';
         } else if (analysisMode === 'mixer') {
             tfConfig = MIXER_TF_CONFIG[timeframeKey];
             title = `🏹 Mixer Panel 🏹`;
-            description = `Analisa pamungkas yang menggabungkan sinkronisasi 3-TF & skoring TOS untuk sinyal super jitu pada kombinasi ${tfConfig.label}.`;
-            btnText = `Jalankan Analisa Mixer`;
+            // description = `Analisa pamungkas yang menggabungkan sinkronisasi 3-TF & skoring TOS untuk sinyal super jitu pada kombinasi ${tfConfig.label}.`;
+            btnText = `ANALISA MIXER ${tfConfig.label}`;
             ui.runAnalysisBtn.className = 'btn-action w-full bg-purple-600 hover:bg-purple-700 text-white font-bold p-4 rounded-lg flex items-center justify-center space-x-2';
             if(ui.eksekusi.findEntryBtn) ui.eksekusi.findEntryBtn.style.display = 'none';
         }
